# cv_arxiv-scraper

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCT_ROADMAP.md  QA_FINDINGS.md  README.md  ROADMAP.md  arxiv.py  backfill_cli.py  config.example.yaml  config.yaml  digest_cli.py  docker-compose.yml  export_cli.py  gmail_auth_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh  scrape_cli.py  start.sh  sync_cli.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  _module_alias.py  constants.py  csrf.py  enums.py  models.py  schema.py  scraper.py  ui.py
app/cli/: __init__.py  backfill.py  digest.py  scrape.py  sync.py
app/enrich/: __init__.py  citations.py  huggingface.py  openalex.py
app/ingest/: __init__.py  http_client.py  oai_pmh_backend.py  orchestrator.py  scrape_engine.py
app/rank/: __init__.py  preferences.py
app/routes/: AGENTS.md  _config.py  _shell.py  api.py  dashboard.py  discover.py  help.py  settings.py  ui.py
app/routes/api/: __init__.py  _validation.py  backup.py  chat.py  collections.py  export.py  feed_sources.py  onboarding.py  papers.py  saved_searches.py  scrape.py  search.py
app/search_/: __init__.py  embed_backfill.py  embeddings.py  text.py  thumbnail_generator.py
app/services/: AGENTS.md  __init__.py  arxiv_adapter.py  backup.py  bibtex.py  citations.py  corpus_analysis.py  cron.py  email_digest.py  embed_backfill.py  embeddings.py  enrichment.py  export.py  feedback.py  http_client.py  interest_model.py  jobs.py  llm_client.py  matching.py  mendeley.py  metrics.py  onboarding.py  openalex.py  pdf_extraction.py  preferences.py  rag.py  ranking.py  rate_limiter.py  recommendations.py  related.py  saved_search.py  scheduler.py  scrape_engine.py  search.py  secret_files.py  subprocess_runner.py  summary.py  text.py  thumbnail_generator.py  thumbnail_warmer.py  (+2 more)
app/services/enrichment_providers/: __init__.py  base.py  github.py  huggingface.py  openalex_provider.py  semantic_scholar.py
app/services/ingest/: AGENTS.md  __init__.py  arxiv_api_backend.py  base.py  oai_pmh_backend.py  orchestrator.py  rss_backend.py
app/services/pipeline/: __init__.py  candidate_generation.py  features.py  ranker.py
app/static/: src.css  style.classic.css  style.css
app/templates/: base.html  dashboard.html  discover.html  export.html  help.html  settings.html
app/templates/classic/: base.html  dashboard.html  discover.html  settings.html
app/templates/classic/help/: base.html  cli.html  export.html  faq.html  features.html  organization.html  search.html  settings.html  start.html  ui.html
app/templates/help/: base.html  cli.html  export.html  faq.html  features.html  organization.html  search.html  settings.html  start.html  ui.html
app/templates/partials/: _corpus_insights.html  _dashboard_scripts.html  _paper_actions.html  _paper_authors.html  _paper_badges.html  _paper_card.html  _paper_details.html  _paper_row.html  _paper_stats.html  _score_bars.html  _scrape_progress.html  _shell_scripts.html  _shortcuts_modal.html
app/web/: __init__.py  email_digest.py  scheduler.py
scripts/: block_credential_files.py  capture_screenshots.py
tests/: AGENTS.md  conftest.py  helpers.py  test_api.py  test_app_factory.py  test_backfill_cli.py  test_backup.py  test_bibtex.py  test_collections_dashboard.py  test_config.py  test_corpus_analysis.py  test_dashboard.py  test_data_source_keys.py  test_discover_corpus_insights.py  test_email_digest.py  test_embeddings.py  test_enrichment.py  test_enrichment_cache.py  test_export.py  test_export_cli.py  test_feedback.py  test_github_provider.py  test_help.py  test_http_client.py  test_huggingface_provider.py  test_ingest_backends.py  test_ingest_orchestrator.py  test_interest_model.py  test_jobs.py  test_llm_client.py  test_mendeley.py  test_metrics.py  test_new_features.py  test_onboarding.py  test_openalex.py  test_package_layout.py  test_paper_management_dashboard.py  test_pdf_extraction.py  test_pipeline.py  test_qa_api_validation.py  (+69 more)
tests/e2e/: conftest.py  test_browser.py
