[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-arxiv-scraper"
version = "0.1.0"
description = "arXiv CV scraping, enrichment, ranking, and digest tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flask==3.1.3",
  "flask-sqlalchemy==3.1.1",
  "pyyaml==6.0.2",
  "feedparser==6.0.11",
  "defusedxml>=0.7.1",
  "pdfplumber>=0.10.0",
  "requests==2.33.1",
  "tqdm==4.67.1",
  "openai>=1.0.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.127.0",
  "requests-oauthlib>=1.3.0",
  "gunicorn>=22.0.0",
  "numpy>=1.24.0",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2.0",
  "Pillow>=9.0.0",
  "peft>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/rafico/cv_arxiv-scraper"
Repository = "https://github.com/rafico/cv_arxiv-scraper"
Issues = "https://github.com/rafico/cv_arxiv-scraper/issues"

[project.scripts]
cv-arxiv-scrape = "app.cli.scrape:main"
cv-arxiv-sync = "app.cli.sync:main"
cv-arxiv-backfill = "app.cli.backfill:main"
cv-arxiv-digest = "app.cli.digest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "templates/*.html",
  "templates/**/*.html",
  "static/**/*",
]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end browser tests (require Playwright)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
  "E501",
]
