[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-arxiv-scraper"
version = "0.1.0"
description = "arXiv CV scraping, enrichment, ranking, and digest tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flask==3.1.3",
  "flask-sqlalchemy==3.1.1",
  "pyyaml==6.0.2",
  "feedparser==6.0.11",
  "defusedxml>=0.7.1",
  "pdfplumber>=0.10.0",
  "requests==2.33.1",
  "tqdm==4.67.1",
  "openai>=1.0.0,<3",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.127.0",
  "requests-oauthlib>=1.3.0",
  "gunicorn>=22.0.0",
  "numpy>=1.24.0,<3",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2.0,<4",
  "Pillow>=9.0.0",
  "peft>=0.10.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
  "pytest-playwright>=0.4.0",
  "playwright>=1.40.0",
  "fpdf2>=2.7.0",
  "ruff>=0.11.0",
  "pip-audit>=2.9.0",
  "pre-commit>=3.7.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/rafico/cv_arxiv-scraper"
Repository = "https://github.com/rafico/cv_arxiv-scraper"
Issues = "https://github.com/rafico/cv_arxiv-scraper/issues"

[project.scripts]
cv-arxiv-scrape = "app.cli.scrape:main"
cv-arxiv-sync = "app.cli.sync:main"
cv-arxiv-backfill = "app.cli.backfill:main"
cv-arxiv-digest = "app.cli.digest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "templates/*.html",
  "templates/**/*.html",
  "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "unit: Fast unit tests (no I/O, no network, no DB).",
    "integration: Tests that touch the DB, filesystem, or in-process services.",
    "e2e: End-to-end browser tests (require Playwright).",
    "slow: Tests that take more than a couple seconds to run.",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
packages = ["app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
follow_imports = "silent"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "S"]
ignore = [
  "E501",
  "S101",   # use of assert — common in tests
  "S105",   # false positives on filename/URL constants
  "S110",   # try/except/pass — intentional best-effort cleanup paths
  "S311",   # pseudo-random — not used for crypto
  "S607",   # partial executable paths — fine for local subprocess helpers
  "B007",   # legacy backlog: unused loop control variables
  "B008",   # Flask/SQLAlchemy default-arg idioms
  "B023",   # legacy backlog: loop-variable-in-closure
  "B905",   # legacy backlog: zip() without strict=
  "C408",   # stylistic backlog: dict() with keyword args
  "SIM102", # legacy backlog: collapsible nested if
  "SIM103", # legacy backlog: return-the-condition
  "SIM105", # legacy backlog: contextlib.suppress rewrites
  "SIM108", # ternary rewrites often hurt clarity here
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B011", "SIM117"]
"scripts/**/*.py" = ["S"]
